# periodic-io

./: .gitignore  CMakeLists.txt  make-daint.inc  make-gnu.inc  make-intel.inc  makefile  readme.md  readme.txt
dev/: doc.md
dev/src/OM-fingerprint/: CMakeLists.txt  OM.f90
dev/src/fingerprint-programs/: CMakeLists.txt  env-diff-max.f90  env-diff-min.f90  fingerprint-distance.f90
dev/src/periodic_operations/: CMakeLists.txt  is_element.f90  periodic_operations.f90  reshaping.f90  string_ops.f90  sym2mass.f90
dev/src/read/: CMakeLists.txt  read_ascii.f90  read_cif.f90  read_dftb.f90  read_extxyz.f90  read_in.f90  read_periodic.f90  read_quantum_espresso.f90  read_vasp.f90  read_xyz.f90
dev/src/transform/: CMakeLists.txt  ascii2cif.f90  ascii2in.f90  back2cell-wildcard.f90  back2cell.f90  cif2ascii.f90  in2ascii.f90  periodic2qe.f90  qe2periodic.f90  reshape-cell-wildcard.f90  reshape-cell.f90  set-comment-periodic.f90  supercell.f90  transform-periodic-wildcard.f90  transform-periodic.f90
dev/src/write/: CMakeLists.txt  write_alamode.f90  write_ascii.f90  write_cif.f90  write_dftb.f90  write_extxyz.f90  write_in.f90  write_periodic.f90  write_quantum_espresso.f90  write_vasp.f90  write_xyz.f90
dev/test/: 1159372.cif  CMakeLists.txt  POSCAR  a.ascii  b.cif  p.ascii  test_all.sh
dev/test/test_dat/: CMakeLists.txt  CSH10.ascii  CSH11.ascii  CSH12.ascii  CSH13.ascii  CSH14.ascii  CSH2.ascii  CSH3_opt.ascii  CSH4_opt.ascii  CSH5.ascii  CSH6_opt.ascii  CSH7.ascii  CSH8_opt.ascii  CSH9.ascii
dev/test/test_free_boundary_conditions/: CS2H12-1.xyz  CS2H12-2.xyz  pos_input_01.xyz  pos_input_03.xyz
dev/test/test_src_fingerprint/: fpd.f90  hung.f90  main.f90  makefile  sym2rcov.f90
